# neumonia_uao

./: .gitignore  CONSTITUTION.md  Dockerfile  LICENSE  Makefile  README.md  detector_neumonia.py  load_model.py  main.py  pyproject.toml  read_img.py  skills-lock.json
src/: detector_neumonia.py  grad_cam.py  integrator.py  load_model.py  preprocess_img.py  read_img.py
src/gui/: controller.py  theme.py  views.py  worker.py
test/: conftest.py  test_detector.py
