[project]
name = "clase-3"
version = "0.1.0"
description = "Herramienta para la detección rápida de neumonía mediante Deep Learning en imágenes radiográficas de tórax"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jan Polanco" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # ML / Deep Learning
    "tensorflow>=2.21.0",
    "matplotlib",

    # Web / API
    "streamlit>=1.60.0",
    "uvicorn",
    "fastapi",

    # Image processing
    "pillow",
    "opencv-python",
    "pydicom",

    # Data
    "pandas>=2.3.3",

    # GUI (Tkinter-based)
    "pyautogui",
    "tkcap",
    "img2pdf",
    "python-xlib",

    # Dev
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pre-commit>=4.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/dalquinones/UAO-Neumonia"
Original = "https://github.com/dalquinones/UAO-Neumonia"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["F403", "F405", "N812", "E402"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
